# ngraph

./: CMakeLists.txt  CONTRIB.md
cmake/: external_json.cmake
python/: setup.py
python/ngraph/: runtime.py
python/pyngraph/: pyngraph.cpp
python/test/ngraph/: test_onnx_import.py
src/ngraph/: CMakeLists.txt  function.cpp  graph_util.cpp  graph_util.hpp  node.cpp  node.hpp  util.hpp
src/ngraph/autodiff/: adjoints.cpp
src/ngraph/codegen/: CMakeLists.txt
src/ngraph/descriptor/: tensor_view.cpp  tensor_view.hpp
src/ngraph/frontend/onnx_import/: CMakeLists.txt  attribute.hpp  graph.cpp  graph.hpp  model.hpp  node.hpp  onnx.cpp  onnx.hpp  tensor.hpp  value_info.hpp
src/ngraph/op/: allreduce.cpp  avg_pool.cpp  batch_norm.cpp  broadcast.cpp  broadcast.hpp  concat.cpp  convert.cpp  convolution.cpp  dot.cpp  max_pool.cpp  not.cpp  parameter.cpp  reshape.cpp  result.cpp  reverse.cpp  reverse_sequence.cpp  slice.cpp  slice.hpp
src/ngraph/op/util/: binary_elementwise.cpp  binary_elementwise.hpp  binary_elementwise_arithmetic.cpp  binary_elementwise_comparison.cpp  binary_elementwise_logical.cpp  requires_tensor_view_args.cpp  unary_elementwise.hpp
src/ngraph/pass/: core_fusion.cpp
src/ngraph/runtime/: backend.cpp  backend.hpp  backend_manager.cpp  backend_manager.hpp
src/ngraph/runtime/cpu/: CMakeLists.txt  cpu_builder.cpp  cpu_builder.hpp  cpu_external_function.cpp  cpu_external_function.hpp
src/ngraph/runtime/cpu/builder/: batch_norm.cpp  reshape.cpp
src/ngraph/runtime/cpu/op/: convert_layout.cpp  matmul_bias.cpp
src/ngraph/runtime/gpu/: CMakeLists.txt
src/ngraph/runtime/intelgpu/: CMakeLists.txt
src/ngraph/runtime/interpreter/: CMakeLists.txt  exec_node.cpp  exec_node.hpp  int_backend.cpp  int_backend.hpp  op_creator.hpp
src/ngraph/runtime/interpreter/op/: abs.cpp  abs.hpp  acos.cpp  acos.hpp  add.cpp  add.hpp  allreduce.cpp  allreduce.hpp  and.cpp  and.hpp  asin.cpp  asin.hpp  atan.cpp  atan.hpp  avg_pool.cpp  avg_pool.hpp  batch_norm.cpp  batch_norm.hpp  broadcast.cpp  broadcast.hpp  ceiling.cpp  ceiling.hpp  concat.cpp  concat.hpp  constant.cpp  constant.hpp  convert.cpp  convert.hpp  convolution.cpp  convolution.hpp  cos.cpp  cos.hpp  cosh.cpp  cosh.hpp  divide.cpp  divide.hpp  dot.cpp  dot.hpp  equal.cpp  equal.hpp  (+97 more)
src/ngraph/runtime/interpreter/util/: mkop.sh  template.cpp  template.hpp
src/ngraph/type/: element_type.cpp  element_type.hpp
src/tools/compile_benchmark/: CMakeLists.txt
test/: CMakeLists.txt  backend_test.in.cpp  cpu_test.cpp  graph_partition.cpp  onnx_import.cpp
test/util/: test_control.cpp
